resize hero header to fix footer spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -342,7 +342,8 @@ article {
 
 .section-hero {
   margin-top: 7rem;
-  min-height: 100%;
+  height: 75vh;
+  max-height: 28rem;
   position: relative;
   display: flex;
   flex-flow: column nowrap;
