--- a/assets/scss/components/_home.scss
+++ b/assets/scss/components/_home.scss
@@ -26,7 +26,8 @@
 .section-hero {
     margin-top: $rhythm * 5;
 
-    min-height: 100%;
+    height: 75vh;
+    max-height: 28rem;
 
     position: relative;
 
